feat: 增加实时获取数据的条形图

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,22 +6,33 @@
     <script src="https://cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
     <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts-wordcloud.min.js"></script>
-
+    <style>
+        div{
+            left: 40px;
+        }
+    </style>
 </head>
 <body>
-    <div id="bar" style="width:1000px; height:600px;"></div>
-    <div id="cloud" style="width:1000px; height:600px;">
-    </div>
+    <div id="block" style="width:100px; height:60px;"></div>
+    <div id="bar" style="width:1200px; height:700px;" align="center" top=100px left=50px></div>
+    <div id="block" style="width:1000px; height:100px;"></div>
+    <div id="cloud" style="width:1200px; height:700px;" align="center"></div>
+    <div id="block" style="width:100px; height:60px;"></div>
+    <div id="bar_ups" style="width:1200px; height:700px;" align="center"></div>
+
     <script>
         var chart = echarts.init(document.getElementById('bar'), 'white', {renderer: 'canvas'});
         var chart_cloud = echarts.init(document.getElementById('cloud'), 'white', {renderer: 'canvas'});
+        var chart_ups = echarts.init(document.getElementById('bar_ups'), 'white', {renderer: 'canvas'});
 
         $(
             function () {
                 fetchData(chart);
                 fetchCloudData(chart_cloud);
+                fetchBarUpsData(chart_ups)
                 setInterval(fetchData,2000);
                 setInterval(fetchCloudData, 2000);
+                setInterval(fetchBarUpsData,2000);
 
             }
         );
@@ -46,7 +57,18 @@
                     chart_cloud.setOption(result);
                 }
             });
-        }
+        };
+
+        function fetchBarUpsData() {
+            $.ajax({
+                type: "GET",
+                url: "http://127.0.0.1:5000/bar_ups",
+                dataType: 'json',
+                success: function (result) {
+                    chart_ups.setOption(result);
+                }
+            });
+        };
     </script>
 </body>
 </html>
