--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
+    <link rel="stylesheet" href="/static/css/style.css"/>
+    <script type="text/javascript" src="/static/js/jquery-1.8.0.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
     <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts-wordcloud.min.js"></script>
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        html {
+            font-family: "微软雅黑";
+            -webkit-text-size-adjust: 100%;
+            -ms-text-size-adjust: 100%;
+        }
+
+        body {
+            background-color: #fff;
+            color: #fff;
+            position: relative;
+            font-family: "微软雅黑";
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+
+        img {
+            vertical-align: middle;
+        }
+
+        ul {
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            width: 100%;
+            height: 90px;
+            text-align: center;
+            font-size: 36px;
+            color: #000;
+            line-height: 90px;
+            margin: 0 auto;
+        }
+
         div {
-            left: 20px;
+            left: 30px;
         }
     </style>
 </head>
 <body>
+<header>
+    雪球网数据可视化
+    <span id=localtime style=" font-size:14px; position: absolute; right: 30px; top:-20px; "></span>
+</header>
+
 
 <div id="bar" style="width:1200px; height:600px;" align="center" top=100px left=50px></div>
 <div id="cloud" style="width:1200px; height:600px;" align="center"></div>
